--- a/static/version_manifest.json
+++ b/static/version_manifest.json
@@ -1,14 +1,30 @@
 {
-  "build_time": "2025-05-25T20:31:02.870465",
-  "build_timestamp": 1748205062,
+  "build_time": "2025-05-25T20:48:25.845009",
+  "build_timestamp": 1748206105,
   "files": {
     "css/game.css": {
       "hash": "718936dd",
       "versioned_path": "css/game.css?v=718936dd"
     },
+    "css/create_game.css": {
+      "hash": "b0d4b111",
+      "versioned_path": "css/create_game.css?v=b0d4b111"
+    },
+    "css/join.css": {
+      "hash": "513cd530",
+      "versioned_path": "css/join.css?v=513cd530"
+    },
     "js/game.js": {
       "hash": "9e2ef61d",
       "versioned_path": "js/game.js?v=9e2ef61d"
+    },
+    "js/create_game.js": {
+      "hash": "0701ac82",
+      "versioned_path": "js/create_game.js?v=0701ac82"
+    },
+    "js/join.js": {
+      "hash": "5d9336c8",
+      "versioned_path": "js/join.js?v=5d9336c8"
     },
     "suswords.png": {
       "hash": "485c06e7",
@@ -39,5 +55,5 @@
       "versioned_path": "sw.js?v=24ea5992"
     }
   },
-  "global_version": "c72124d6"
+  "global_version": "a572cfbb"
 }
